# cascade-typeset

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  VERIFICATION.md  cascade.toml  deno.jsonc  index.html  justfile  rust-toolchain.toml  serve.ts
.claude/: launch.json
archive/: .gitignore  README.md  justfile
archive/cascade/: Cargo.toml
archive/cascade-css/: README.md  cascade.css  font.css  sidenotes.css
archive/cascade-css/fonts/: inter.css  jost.css
archive/cascade-typst/: font.typ  rhythm.typ  scale.typ  utils.typ
archive/cascade/lib/: Cargo.toml  cascade.ron  tokens.ron
archive/cascade/lib/examples/: poc.rs
archive/cascade/lib/src/: lib.rs  main.rs  manifest.rs  render.rs  spec.rs  validate.rs
archive/cascade/lib/templates/css/: example.css  font.css  font_preset.css  rhythm.css  scale.css  theme.css
archive/cascade/lib/templates/typst/: font.typ  rhythm.typ  scale.typ  theme.typ
archive/cascade/lib/tests/: grammar_css.rs  parity_css.rs  parity_typst.rs  spec_valid.rs
archive/cascade/web/: Cargo.toml
archive/cascade/web/src/: main.rs
archive/examples/: feature-test.typ  sample.html  sample.typ
archive/site/: index.html  serve.ts
archive/site/assets/: README.txt
archive/tools/: verify.mjs
cascade/: Cargo.toml  build.rs  theme.ron  tokens.ron
cascade-cli/: Cargo.toml
cascade-cli/src/: main.rs
cascade-css/: Cargo.toml  README.md  layout.css  rhythm.css  sample.html  scale.css  sidenotes.css  theme.css
cascade-css/fonts/: lora.css
cascade-css/src/: lib.rs
cascade-css/templates/: font.css  fonts.css  optical.css  rhythm.css  scale.css  sidenotes.css  theme.css  typefaces.css
cascade-typst/: Cargo.toml  feature-test.typ  font.typ  layout.typ  sample.typ  theme.typ
cascade-typst/src/: lib.rs
cascade-typst/templates/: cascade.typ
cascade/fonts/: README.md  ibmplexmono.ron  inter.ron  jost.ron  lora.ron
cascade/src/: formula.rs  lib.rs  measure.rs  optical.rs  renderer.rs  spec.rs
cascade/themes/: paper.ron  slate.ron
site/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  index.html  justfile  serve.ts
site/.claude/: launch.json
site/src/: assets.rs  css.rs  main.rs  pdf.rs  state.rs  web.rs
site/templates/: base.html  index.html  sample.html  sample.typ
site/web/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
site/web/scripts/: vendor.ts
site/web/src/: main.ts  site.css
tools/: gen.mjs  tokens.mjs
