# cascade-typeset — workspace. Dependencies point inward to the protocol (`cascade`).
#   cascade       — the protocol: defines the Renderer trait + the spec + validation.
#   cascade-css   — a Renderer implementation (CSS); owns its templates.
#   cascade-typst — a Renderer implementation (Typst); owns its templates. [stub]
#   cascade-cli   — the composition root: resolves a consumer config, runs the renderers, writes output.
#   site          — the public cascade site (Axum + Askama + datastar), a consumer of cascade-css.
[workspace]
resolver = "2"
members = ["cascade", "cascade-css", "cascade-typst", "cascade-cli", "site"]
