[package]
name = "cascade-typst"
version = "0.1.0"
edition = "2024"

# A Renderer implementation for Typst (print / PDF). Projects the spec's formulas over f64 (the
# numeric side of the dual projection) and BAKES concrete values into Typst source; `verify` shells
# out to the `typst` CLI to compile the output. Depends on the protocol + askama (template engine,
# same as cascade-css).
[dependencies]
askama = "0.16.0"
cascade = { path = "../cascade" }
